<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="miss_permission_hint">App needs to request %s permission to use this function normally</string>
    <string name="denied_forever_permission_hint">Permission request rejected. App needs to use %s permission. Please go to \"Settings\">\"App management\">\"Lit Brick\">\"Permission\" to allow related permission to use this function normally</string>
    <string name="remote_landing">Your account was accessed on another device at %s. If it was not done by you, the password may have been leaked. You are advised to go to App to log in, click Forget Password and change the password</string>
    <string name="exit_app_tips">Press again to exit App</string>
    <string name="privacy_statement_title">Privacy permission statement</string>
    <string name="privacy_statement_content">Welcome to Lit Brick. You can use this App to manage your device and view related exercise and health data. We will strictly abide by relevant laws, regulations and privacy policies to protect your personal information. To provide the most basic services, the App needs to be connected to the internet.</string>
    <string name="privacy_statement_agree">Agree and continue</string>
    <string name="privacy_statement_quit">Exit</string>
    <string name="privacy_statement_disagree">Disagree</string>
    <string name="privacy_statement_1">Please read and agree</string>
    <string name="find_password_title">Forget password</string>
    <string name="find_password_code">Please enter verification code</string>
    <string name="find_password_get_code">Get</string>
    <string name="again_get_code">Reacquire</string>
    <string name="find_password_modify_password_success">Changed</string>
    <string name="send_code_error">Failed to send verification code</string>
    <string name="send_code_frequently">Frequent acquisition of verification code</string>
    <string name="send_code_invalid">Invalid verification code</string>
    <string name="send_code_mistake">Wrong verification code</string>
    <string name="not_network_tips">Please make sure WiFi or data network is available</string>
    <string name="err_network_tips">Request failed. Retry later</string>
    <string name="disagree_context">Your consent is required before you continue to use Lit Brick services.</string>
    <string name="disagree_left_btn">Disagree</string>
    <string name="disagree_right_btn">Agree and continue</string>
    <string name="scan_device_title">Bind device</string>
    <string name="scan_device_scanning">Searching device</string>
    <string name="scan_device_tip">Please move device close to phone</string>
    <string name="scan_device_over">Device search completed</string>
    <string name="scan_device_connect">Click to connect device</string>
    <string name="bind_device_tip">Please move watch close to phone</string>
    <string name="bind_device_error">Bind failed!</string>
    <string name="bind_device_help">View Help</string>
    <string name="bind_device_duplicate">Device is already bound. Please unbind first</string>
    <string name="scan_no_device_title">Device not found</string>
    <string name="scan_no_device_content">Please try the following solution:\n\n· Make sure Bluetooth permission on App is enabled\n· Make sure device is not connected with another phone\n· Turn off mobile Bluetooth and turn it on again\n· Try to restart phone or device</string>
    <string name="scan_error_dialog_title">Scan failed</string>
    <string name="scan_error_dialog_content">Please scan the right QR code</string>
    <string name="bind_device_state1_1">Connecting…</string>
    <string name="bind_device_state1_2">Connected</string>
    <string name="bind_device_state1_3">Connect failed</string>
    <string name="bind_device_state2_1">Device binding</string>
    <string name="bind_device_state2_2">Device binding…</string>
    <string name="bind_device_state2_3">Device bind failed</string>
    <string name="bind_device_state2_4">Device bound</string>
    <string name="bind_device_state3_1">Account binding</string>
    <string name="bind_device_state3_2">Account binding…</string>
    <string name="bind_device_state3_3">Account binding failed</string>
    <string name="bind_device_state3_4">Account bound</string>
    <string name="bind_device_get_device_info_no_data_tips">This device version info not found</string>
    <string name="bind_device_get_device_info_has_data_tips">Find this device version info</string>
    <string name="bind_device_get_device_info_failure_tips">Failed to get device version info</string>
    <string name="send_device_cmd_tip_not_support">Device does not support this property now</string>
    <string name="send_device_cmd_tip_not_ready">Device not ready</string>
    <string name="send_device_cmd_tip_failed">Please move device close to phone and try again</string>
    <string name="send_device_cmd_tip_param_err">Abnormal parameter settings</string>
    <string name="send_device_cmd_tip_unknown">Unknown error of device</string>
    <string name="send_device_cmd_tip_timeout">Device response timeout</string>
    <string name="device_connected">Device connected</string>
    <string name="device_disconnected">Device disconnected</string>
    <string name="device_connected_failed">Device connection failed</string>
    <string name="device_connecting">Device connecting…</string>
    <string name="device_no_connection">Device not connected</string>
    <string name="bind_device_reset">Device is already bound. Please restore factory and retry!</string>
    <string name="bind_device_tip1">Align at device QR code</string>
    <string name="scan_code_title">QR code pairing</string>
    <string name="device_fragment_my">Device management</string>
    <string name="device_fragment_add">Add</string>
    <string name="device_fragment_using">Enabling</string>
    <string name="device_fragment_using_no">Not enabled</string>
    <string name="device_set_title">Device detail</string>
    <string name="device_welcome_user">Lit Brick Welcome</string>
    <string name="device_no_bind_add_text">Please add your device</string>
    <string name="device_no_bind_click_add_text">Click to add your device</string>
    <string name="device_battery_charge_state">Charging</string>
    <string name="device_fragment_set_my_theme">My dial</string>
    <string name="device_fragment_set_theme_center">Dial center</string>
    <string name="device_fragment_set_message">Message notification settings</string>
    <string name="device_fragment_set_remind">Reminder settings</string>
    <string name="device_fragment_set_goal">Target settings</string>
    <string name="device_fragment_set_sleep">Sleep settings</string>
    <string name="device_set_theme">Dial center</string>
    <string name="device_set_message">Information notification</string>
    <string name="device_set_remind">Reminder settings</string>
    <string name="device_set_heart">Continuous heart rate monitoring</string>
    <string name="device_set_wrist_bright">Raise to Wake</string>
    <string name="device_set_weather">Weather settings</string>
    <string name="device_set_find_device">Find device</string>
    <string name="device_set_take_picture">Shake to take photos</string>
    <string name="device_set_take_more">More settings</string>
    <string name="device_set_unbind">Unbind</string>
    <string name="device_max_device_bind_tips">Max. 5 devices. Unable to add more</string>
    <string name="device_msg_notify_lock">Notify only when phone screen is locked</string>
    <string name="device_msg_notify_sys">Message notification</string>
    <string name="device_msg_notify_switch">Master switch</string>
    <string name="device_msg_notify_call">Incoming call alert</string>
    <string name="device_msg_notify_sms">Message alert</string>
    <string name="device_msg_notify_missed_call">Missed calls</string>
    <string name="device_msg_notify_other">Third-party App</string>
    <string name="device_remind_sedentary">Sedentary alert</string>
    <string name="device_remind_drink_water">Drink water reminder</string>
    <string name="device_remind_alarm_clock">Alarm reminder</string>
    <string name="device_remind_take_pills">Medication reminder</string>
    <string name="device_remind_event">Event reminder</string>
    <string name="open_remind_sedentary_tip">When \"Sedentary Alert\" is enabled, the alert will be on with vibration in the set time. Get up and walk around regularly.</string>
    <string name="open_remind_drink_tip">When \"Drink Water Reminder\" is enabled, the reminder will be on with vibration in the set time. Adults are advised to drink 1,500ml-1,700ml water every day.</string>
    <string name="open_remind_pills_tip">When \"Medication Reminder\" is enabled, the reminder will be on with vibration in the set time. Timed medication enhances compliance and thus improve therapeutic effect. </string>
    <string name="open_remind_alarm_tip">When \"Alarm Reminder\" is enabled, the reminder will be on with vibration in the set time.</string>
    <string name="open_remind_event_tip">When \"Event Reminder\" is enabled, the reminder will be on with vibration in the set time.</string>
    <string name="remind_section">Reminder range</string>
    <string name="remind_interval">Reminder interval</string>
    <string name="illegal_remind_time_tips">The duration between start and end must be equal to or bigger than the reminder interval. Otherwise, the reminder will be invalid. Continue?</string>
    <string name="register_account_email_tips">Please enter email</string>
    <string name="user_info_avatar_from_album">Select from Album</string>
    <string name="user_info_avatar_photograph">Photo-taking</string>
    <string name="dialog_cancel_btn">Cancel</string>
    <string name="heart_rate_maximum_heart_rate">Max. heart rate</string>
    <string name="select_feedback_problem_type_tips">1. Please select problem type*</string>
    <string name="feedback_problem_type_tips">Feedback type</string>
    <string name="please_select_problem_type">Please select question type</string>
    <string name="please_desc_feedback_problem">Please describe problem*</string>
    <string name="failure_date">Failure date</string>
    <string name="failure_time">Failure time</string>
    <string name="detail_desc">Detailed description*</string>
    <string name="pls_input_desc_problem">Please enter your feedback</string>
    <string name="upload_screenshot">Upload problem picture (optional)</string>
    <string name="feedback_contact_tips">Contact (for us to contact you)*</string>
    <string name="feedback_email_tips">Email:</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="send_app_log">Send App log</string>
    <string name="send_device_log">Send device log</string>
    <string name="question_feedback_type_title">Select the type of feedback*</string>
    <string name="ecg_calibration_question_title1">1. What is a blood pressure level?</string>
    <string name="ecg_calibration_question_title2">1. What is the precision value?</string>
    <string name="ecg_calibration_question_tips1">The blood pressure level calibration value is the average value obtained from a large-scale sampling of Chinese people by national authoritative medical institutions. Due to individual physical differences, in order to ensure a more realistic measurement value, please measure the blood pressure after calibration.</string>
    <string name="ecg_calibration_question_tips2">For accurate value calibration, the average value of the data measured by the nationally certified blood pressure measuring equipment or the average blood pressure of the physical examination should be used.</string>
    <string name="feedback_log">Upload logs (help us locate and optimize problems)</string>
    <string name="no_data_sign">--</string>
    <string name="hr_unit_bpm">bpm</string>
</resources>