<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/index_bg_color"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.login.privacy.PrivacyStatementActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/privacy_statement_title"
        android:textColor="@color/color_171717"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_statement_content"
            android:textColor="@color/color_171717"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvContent">


        <TextView
            android:id="@+id/tvPrivacyAuthority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/app_index_color"
            android:textSize="14sp"
            tools:text="@string/privacy_statement_1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btAgree"
            style="@style/selector_public_button"
            android:layout_marginStart="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="0dp"
            android:text="@string/privacy_statement_agree" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btQuit"
            style="@style/selector_public_1_button"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="50dp"
            android:text="@string/privacy_statement_disagree" />

    </LinearLayout>


</LinearLayout>