<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/index_bg_color"
    tools:context=".ui.user.QuestionFeedbackActivity">

    <include
        android:id="@+id/title"
        layout="@layout/public_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvQuestionFeedbackUserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/public_bg"
                android:padding="10dp"
                android:textColor="@color/color_171717"
                android:textSize="16sp"
                tools:text="用户ID：000000001" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/select_feedback_problem_type_tips"
                android:textColor="@color/color_171717"
                android:textSize="16sp"
                android:visibility="gone"
                tools:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:id="@+id/rl_feedback_type_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/feedback_problem_type_tips"
                        android:textColor="@color/color_171717"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawableEnd="@mipmap/arrow_right"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/please_select_problem_type"
                        android:textColor="@color/color_878787"
                        android:textSize="14sp" />

                </RelativeLayout>


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/please_desc_feedback_problem"
                android:textColor="@color/color_171717"
                android:textSize="16sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/failure_date"
                        android:textColor="@color/color_171717"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvQuestionFeedbackDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableEnd="@mipmap/arrow_right"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/color_878787"
                        android:textSize="14sp"
                        tools:text="2021.08.25" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/failure_time"
                        android:textColor="@color/color_171717"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvQuestionFeedbackTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawableEnd="@mipmap/arrow_right"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/color_878787"
                        android:textSize="14sp"
                        tools:text="15:30" />

                </RelativeLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_feedback_type_title"
                android:textColor="@color/color_171717"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_question_type"
                tools:orientation="horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/detail_desc"
                android:textColor="@color/color_171717"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/public_bg"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_feedback_content_desc"
                    style="@style/public_1_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="start"
                    android:hint="@string/pls_input_desc_problem"
                    android:imeOptions="actionNone"
                    android:maxLength="500"
                    android:minHeight="150dp"
                    android:textCursorDrawable="@drawable/cursor_color" />

                <TextView
                    android:id="@+id/tv_feedback_submit_content_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="end"
                    android:text="0/500"
                    android:textColor="@color/color_171717"
                    android:textSize="14sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:gravity="center"
                    android:text="@string/upload_screenshot"
                    android:textColor="@color/color_171717"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_feedback_pic_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:textColor="@color/color_878787"
                    android:textSize="14sp" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvFeedbackScreenshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/feedback_contact_tips"
                android:textColor="@color/color_171717"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/public_bg"
                android:gravity="center_vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_email_tips"
                    android:textColor="@color/color_171717"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_feedback_contact"
                    style="@style/public_1_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|left"
                    android:hint="@string/register_account_email_tips"
                    android:maxLength="30"
                    android:paddingStart="5dp"
                    android:textCursorDrawable="@drawable/cursor_color" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_feedback_need_app_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/check_circle_selector"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/send_app_log"
                    android:textColor="@color/color_171717"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_feedback_need_device_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:drawableStart="@drawable/check_circle_selector"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/send_device_log"
                    android:textColor="@color/color_171717"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView

                android:id="@+id/tvFeedbackLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/check_circle_selector"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/feedback_log"
                android:textColor="@color/color_171717"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btnFinish"
                style="@style/selector_public_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="130dp"
                android:gravity="center"
                android:text="@string/submit_feedback"
                android:textColor="@color/color_171717"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>